Changed colors again

--- a/access/main.css
+++ b/access/main.css
@@ -329,10 +329,10 @@ i.far {
 	background: rgb(176, 198, 231);
 }
 .covid > div > .razdel {
-	background-color: #a2ff98;
+	background-color: #caf8c0;
 }
 .covid > div > div > .image {
-	border-color: #a2ff98;
+	border-color: #caf8c0;
 }
 
 .image {
